--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -101,3 +101,9 @@
       text-align: justify;
     }
   }
+
+  @media screen and (min-width: 1201px){
+    #projects {
+        margin-top: 350px;
+    }
+  }
