--- a/style.css
+++ b/style.css
@@ -437,3 +437,33 @@ footer {
 footer p {
   text-align: center;
 }
+
+
+
+.floating-icon {
+  position: fixed;
+  width: 30px;
+  height: 30px;
+  pointer-events: none;
+  z-index: -1; 
+  opacity: 0.25;
+  animation: float linear infinite;
+}
+
+@keyframes float {
+  0% {
+      transform: translate(0, 0) rotate(0deg);
+  }
+  25% {
+      transform: translate(50px, 50px) rotate(90deg);
+  }
+  50% {
+      transform: translate(100px, 0) rotate(180deg);
+  }
+  75% {
+      transform: translate(50px, -50px) rotate(270deg);
+  }
+  100% {
+      transform: translate(0, 0) rotate(360deg);
+  }
+}
